--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <h1> top 10 websites </h1>
-  <p> tales amaral</p>
+	<head>
+		<meta name = "description" content = "tales amaral site">
+		<meta name = "author" content = "tales amaral"> 
+		<meta charset="UTF-8">
+	</head>
+	<body>
+		<h1> top 10 websites </h1>
+		<p> tales amaral</p>
+		<h2> Livros bons </h2>
+		<ul>
+			<li> Os Miseráveis</li>
+			<li> O estrangeiro </li>
+			<li> Cosmos </li>
+			<li> Depois eu coloco mais </li>
+		</ul>
+	</body>
 </html>
