--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	</head>
 	<body>
 		<h1> top 10 websites </h1>
-		<p> tales amaral</p>
+		<p> tales amaral existe?</p>
 		<h2> Livros bons </h2>
 		<ul>
 			<li> Os Miseráveis</li>
-			<li> O estrangeiro </li>
+			<li> O Estrangeiro </li>
 			<li> Cosmos </li>
 			<li> Depois eu coloco mais </li>
 		</ul>
