--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
 		<meta name = "description" content = "tales amaral site">
 		<meta name = "author" content = "tales amaral"> 
 		<meta charset="UTF-8">
+		<style>
+			img {
+				animation: rotation 8s infinite linear;
+			}
+
+			@keyframes rotation {
+				from {
+					transform: rotate(0deg);
+				}
+				to {
+					transform: rotate(359deg);
+				}
+			}
+		</style>
 	</head>
 	<body>
 		<h1> top 10 websites </h1>
@@ -16,5 +30,7 @@
 			<li> Qualquer um do Morgado (rip) </li>
 			<li> Depois eu coloco mais </li>
 		</ul>
+		<h2> Uma imagem girando só pq eu posso </h2>
+		<img src = "urso.png" alt = "urso girando">
 	</body>
 </html>
