--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta name = "description" content = "tales amaral site">
 		<meta name = "author" content = "tales amaral"> 
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<style>
 			img {
 				animation: rotation 8s infinite linear;
