--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
 	<body>
 		<h1> top 10 websites </h1>
 		<p> tales amaral existe?</p>
-		<h2> Livros bons </h2>
+		<h2>Albuns bons</h2>
 		<ul>
-			<li> Os Miseráveis</li>
-			<li> O Estrangeiro </li>
-			<li> Cosmos </li>
-			<li> Qualquer um do Morgado (rip) </li>
+			<li> Luz - Djavan</li>
+			<li> Da Lama ao Caos - Chico Science </li>
 			<li> Depois eu coloco mais </li>
 		</ul>
 		<h2> Uma imagem girando só pq eu posso </h2>
