--- a/index.html
+++ b/index.html
@@ -21,14 +21,8 @@
 		</style>
 	</head>
 	<body>
-		<h1> top 10 websites </h1>
-		<p> tales amaral existe?</p>
-		<h2>Albuns bons</h2>
-		<ul>
-			<li> Luz - Djavan</li>
-			<li> Da Lama ao Caos - Chico Science </li>
-			<li> Depois eu coloco mais </li>
-		</ul>
+		<h1> Pogchamp </h1>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/qMcjWdyItr0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<h2> Uma imagem girando só pq eu posso </h2>
 		<img src = "urso.png" alt = "urso girando">
 	</body>
