--- a/index.html
+++ b/index.html
@@ -5,25 +5,19 @@
 		<meta name = "author" content = "tales amaral"> 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<style>
-			img {
-				animation: rotation 8s infinite linear;
-			}
-
-			@keyframes rotation {
-				from {
-					transform: rotate(0deg);
-				}
-				to {
-					transform: rotate(359deg);
-				}
-			}
-		</style>
+		<link rel="stylesheet" href = "padrao.css">
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+		<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	</head>
+	<header>
+		<h1> Caverna do Tales </h2>
+	</header>
 	<body>
-		<h1> Pogchamp </h1>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/qMcjWdyItr0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		<h2> Uma imagem girando só pq eu posso </h2>
-		<img src = "urso.png" alt = "urso girando">
+		<h2> Coisas interessantes</h2>
+		<ul>
+			<li>
+				<a href="ElevarIrracionais.html"> Truque para elevar irracionais complicados </a>
+			</li>
+		<ul>
 	</body>
 </html>
