--- a/ElevarIrracionais.html
+++ b/ElevarIrracionais.html
@@ -22,6 +22,13 @@
 	</header>
 	<body>
 		<p> Vamos supor que você queira calcular $\phi^{10} = \left(\dfrac{1+\sqrt{5}}{2}\right)^{10} $, sabendo que $\phi \approx 1,61 $. A ideia é achar um polinômio com coeficientes inteiros e uma das raízes iguais a $ \phi $. Então se \[ \begin{align*} x = \phi = \dfrac{ 1+\sqrt{5}}{2} &\implies \\~\\ 2x -1 = \sqrt{5} &\implies \\~\\ 4x^2 -4x+1 = 5 &\implies \\~\\ x^2 =  x+1 &\end{align*} \] Achamos $\phi^2$ em função de $\phi$. Observe que podemos multiplicar ambos os lados da equação por $x$, resultando em $x^3 = x^2+x = \left(x+1\right) +x = 2x+1$. Creio que você ja vê onde vamos chegar: \[ \begin{align*} x^3 = 2x+1 &\implies \\~\\ x^5 = 2x^3+x^2 = 5x+3 &\implies \\~\\ x^{10} = 25x^2+30x+9 = 55x+34 & \\~\\  \end{align*} \] Então $\phi^{10} = 55\phi+34 \approx 55\cdot1,61+34 \approx 122,55$.</p> 
+		<button onclick="trocar()">dark mode</button>
+		<script>
+			function trocar() {
+				   var corpo = document.body;
+				   corpo.classList.toggle("dark-mode");
+			}
+		</script>
 	</body>
 </html>
 
