--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 			<li>
 				<a href="ElevarIrracionais.html"> Truque para elevar irracionais complicados </a>
 			</li>
-		<ul>
+		</ul>
+		<button onclick="trocar()">dark mode</button>
+		<script>
+			function trocar() {
+				   var corpo = document.body;
+				   corpo.classList.toggle("dark-mode");
+			}
+		</script>
 	</body>
 </html>
