--- a/ElevarIrracionais.html
+++ b/ElevarIrracionais.html
@@ -40,12 +40,7 @@
 		\[ \begin{align*} 
 		\left(\sqrt{2}+\sqrt{3}\right)^8 &= 980\cdot\left(5+2\sqrt{6}\right) -99 \\~\\ &= 4900+1960\sqrt{6} -99 \\~\\ &\approx 4801+1960\cdot1.414\cdot1.732 \\~\\&\approx 9601  \end{align*} \]
 		<button onclick="trocar()">dark mode</button>
-		<script>
-			function trocar() {
-							var corpo = document.body;
-							corpo.classList.toggle("dark-mode");
-						}
-		</script>
+		<script type = "text/javascript" src ="trocar.js"></script>
 	</body>
 </html>
 
