--- a/ElevarIrracionais.html
+++ b/ElevarIrracionais.html
@@ -2,8 +2,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name = "description" content = "tales amaral site">
+		<meta name = "description" content = "Truque para elevar irracionais complicador envolvendo sequências e polinômios.">
+		<title>Truque para elevar irracionais complicados</title>
 		<meta name = "author" content = "tales amaral"> 
+		<link rel="icon" type="image/x-icon" href="img/tandera.ico">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href = "padrao.css">
