--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name = "description" content = "tales amaral site">
+		<meta name = "description" content = "Página inicial do site do Tales Amaral, onde se encontrará várias curiosidades matemáticas.">
 		<meta name = "author" content = "tales amaral"> 
+		<title> Caverna do Tales </title>
+		<link rel="icon" type="image/x-icon" href="img/tandera.ico">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href = "padrao.css">
