--- a/phifib.html
+++ b/phifib.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name = "description" content = "tales amaral site">
+		<meta name = "description" content = "Demonstração da relação entre a razão áurea e a sequência de Fibonacci. Isso se dá ao fato da razão áurea vir do polinômio característico da sequência de Fibonacci">
+		<title> Demonstração da relação entre Fib e a Razão áurea</title>
+		<link rel="icon" type="image/x-icon" href="img/tandera.ico">
 		<meta name = "author" content = "tales amaral"> 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
