--- a/ElevarIrracionais.html
+++ b/ElevarIrracionais.html
@@ -29,7 +29,7 @@
 		\[ \begin{align*} x^3 = 2x+1 &\implies \\~\\ x^5 = 2x^3+x^2 = 5x+3 &\implies \\~\\ x^{10} = 25x^2+30x+9 = 55x+34 & \\~\\  \end{align*} \] 
 		<p> Então $\phi^{10} = 55\phi+34 \approx 55\cdot1,61+34 \approx 122,55$.
 		</p>
-		<p> Obs:   Você pode notar que <a href = "phiFib.html" >$\phi^n = f_n\cdot \phi +f_{n-1}$ </a>, onde $f_n$ é o enésimo termo da sequência de fibonacci </p>
+		<p> Obs:   Você pode notar que <a href = "phifib.html" >$\phi^n = f_n\cdot \phi +f_{n-1}$ </a>, onde $f_n$ é o enésimo termo da sequência de fibonacci </p>
 		<p> Complicando um pouco mais: qual o valor de $\left(\sqrt{2}+\sqrt{3}\right)^8$, sabendo que $\sqrt{2} \approx 1.414$ e $\sqrt{3} \approx 1.732$? </p>
 		\[\begin{align*} 
 			x = \sqrt{2}+\sqrt{3} &\implies\\~\\
