--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 		<h1> Caverna do Tales </h2>
 	</header>
 	<body>
+		<h2> Redes Sociais  </h2>
+		<ul>
+			<li> Email: <a href="mailto:talessilvaamaral@gmail.com"> talessilvaamaral@gmail.com</a></p> </li>
+		</ul>
 		<h2> Coisas interessantes</h2>
 		<ul>
 			<li>
