--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 				<a href="phifib.html"> Demonstração $\phi^n = f_n\cdot \phi +f_{n-1}$ (Razão Áurea e Sequência de Fibonacci)</a>
 			</li>
 		</ul>
+		<h2> Critérios de divisibilidade </h2>
+		<ul>
+			<li>
+				<a href="divpor2.html"> Divisibilidade por 2 </a>
+			</li>
+		</ul>
 		<button onclick="trocar()">dark mode</button>
 		<script type = "text/javascript" src ="trocar.js"></script>
 	</body>
