--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 			<li>
 				<a href="divpor2.html"> Divisibilidade por 2 </a>
 			</li>
+
+			<li>
+				<a href="divpor3.html"> Divisibilidade por 3 </a>
+			</li>
 		</ul>
 		<button onclick="trocar()">dark mode</button>
 		<script type = "text/javascript" src ="trocar.js"></script>
