--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
 			<li>
 				<a href="divpor3.html"> Divisibilidade por 3 </a>
 			</li>
+			<li>
+				<a href="divpor5.html"> Divisibilidade por 5 </a>
+			</li>
+			<li>
+				<a href="divpor7.html"> Divisibilidade por 7 </a>
+			</li>
 		</ul>
 		<button onclick="trocar()">dark mode</button>
 		<script type = "text/javascript" src ="trocar.js"></script>
