--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 			<li>
 				<a href="divpor7.html"> Divisibilidade por 7 </a>
 			</li>
+			<li>
+				<a href="divpor11.html"> Divisibilidade por 11 </a>
+			</li>
 		</ul>
 		<button onclick="trocar()">dark mode</button>
 		<script type = "text/javascript" src ="trocar.js"></script>
