--- a/divpor7.html
+++ b/divpor7.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Minified version -->
+		<link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+
+		<!-- Un-Minified version -->
+		<link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
+		<link rel= "stylesheet" href = "padrao.css">
 		<meta name = "description" content = "Demonstrando o critério de divisibilidade por 7.">
 		<title> Divisibilidade por 7</title>
 		<meta name = "author" content = "tales amaral"> 
@@ -18,11 +24,14 @@
 		</script>
 		<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	</head>
-	<header>
-		<h1> Critério de divisibilidade por $7$ </h2>
-		<hr></hr>
-	</header>
 	<body>
+	<header>
+			<nav>
+				<a href = "index.html" > Início </a>
+				<a href="https://github.com/TalesAmaral/talesamaral.github.io" ><svg class="icon" viewBox="0 0 32 32"><path d="M16 0.395c-8.836 0-16 7.163-16 16 0 7.069 4.585 13.067 10.942 15.182 0.8 0.148 1.094-0.347 1.094-0.77 0-0.381-0.015-1.642-0.022-2.979-4.452 0.968-5.391-1.888-5.391-1.888-0.728-1.849-1.776-2.341-1.776-2.341-1.452-0.993 0.11-0.973 0.11-0.973 1.606 0.113 2.452 1.649 2.452 1.649 1.427 2.446 3.743 1.739 4.656 1.33 0.143-1.034 0.558-1.74 1.016-2.14-3.554-0.404-7.29-1.777-7.29-7.907 0-1.747 0.625-3.174 1.649-4.295-0.166-0.403-0.714-2.030 0.155-4.234 0 0 1.344-0.43 4.401 1.64 1.276-0.355 2.645-0.532 4.005-0.539 1.359 0.006 2.729 0.184 4.008 0.539 3.054-2.070 4.395-1.64 4.395-1.64 0.871 2.204 0.323 3.831 0.157 4.234 1.026 1.12 1.647 2.548 1.647 4.295 0 6.145-3.743 7.498-7.306 7.895 0.574 0.497 1.085 1.47 1.085 2.963 0 2.141-0.019 3.864-0.019 4.391 0 0.426 0.288 0.925 1.099 0.768 6.354-2.118 10.933-8.113 10.933-15.18 0-8.837-7.164-16-16-16z"></path></svg>Github</a>
+			</nav>
+		<h1> Critério de divisibilidade por $7$ </h2>
+	</header>
 		<p> Seja $\overline{a_{n}a_{n-1}\cdots a_{2}a_{1}}$ um número genérico. Temos que </p>
 		\[ \begin{align*}
 		\overline{a_{n}a_{n-1}\cdots a_{2}a_{1}} &= \sum_{i = 2}^{n} 10^{i-1}\cdot a_i +a_1\\~\\
@@ -36,8 +45,6 @@
 		\end{align*}\]	
 	
 		<p>Como 5 é coprimo com 7, temos que um número é divisível por 7 se o número sem o primeiro dígito subtraído do dobro do primeiro dígito for divisível por 7.</p>
-		<button onclick="trocar()">dark mode</button>
-		<script type = "text/javascript" src ="trocar.js"></script>
 	</body>
 </html>
 
