--- a/red.html
+++ b/red.html
@@ -7,7 +7,8 @@
 
 		<!-- Un-Minified version -->
 		<link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
-		<meta name="description" content="">
+		<meta name="description" content="Simplified reddit.">
+		<title> Simplified reddit </title>
 		<style>
 			video{
 				max-width: 500px;
