--- a/red.html
+++ b/red.html
@@ -32,9 +32,9 @@
 		</label>
 
 		<button onclick="getData()"> Search </button>
-		<article id = "mural">
+		<main id = "mural">
 
-		</article>
+		</main>
 		<script>
 		function getData(){
 			const subName = document.getElementById("sub").value;
