--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- Minified version -->
-		<link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 
-		<!-- Un-Minified version -->
 		<link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
 		<link rel= "stylesheet" href = "padrao.css">
 		<meta name = "description" content = "Página inicial do site do Tales Amaral, onde se encontrará várias curiosidades matemáticas.">
@@ -33,10 +30,17 @@
 			<p> Onde o Tales de vez em nunca despeja um pouco dos humildes conhecimentos dele. </p>
 		</header>
 		<main>
+<!--
 			<h2> Redes Sociais  </h2>
 			<p> Lugares onde é possível falar comigo. </p>
 			<ul>
 				<li> Email: <a href="mailto:talessilvaamaral@gmail.com"> talessilvaamaral@gmail.com</a></p> </li>
+			</ul>
+-->
+			<h2 id = "ensMedio">Ensino Médio </h2>
+			<ul>
+				<li> <a href="Conjuntos.html">  Conjuntos  </a></li>
+				<li> <a href="funcoes.html">  Funções  </a></li>
 			</ul>
 			<h2 id = "coisas"> Coisas interessantes</h2>
 			<p> Coleção de textos que eu considero interessantes. </p>
@@ -46,6 +50,12 @@
 				</li>
 				<li>
 					<a href="phifib.html"> Demonstração $\phi^n = f_n\cdot \phi +f_{n-1}$ (Razão Áurea e Sequência de Fibonacci)</a>
+				</li>
+				<li>
+					<a href="seq1.html">Termo geral da sequência $x_n = a\cdot x_{n-1} +b^{n-1}$ </a>
+				</li>
+				<li>
+					<a href="term5.html">Como elevar números terminados em 5 ao quadrado</a>
 				</li>
 			</ul>
 			<h2 id = "criterios" > Critérios de divisibilidade </h2>
