--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
 					<a href="divpor11.html"> Divisibilidade por 11 </a>
 				</li>
 			</ul>
+			<h2 id = "api"> APIS </h2>
+			<p> Algumas APIS que eu usei por diversão (um dia eu faço mais) </p>
+			<ul>
+				<li> <a href = "depTabela.html"> Dados dos Deputados </a> </li>
+				<li> <a href = "ibgeDados.html"> Dados do IBGE </a> </li> 
+			</ul>
 		</main>
 	</body>
 </html>
