--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 			<h2 id = "api"> APIS </h2>
 			<p> Algumas APIS que eu usei por diversão (um dia eu faço mais) </p>
 			<ul>
+				<li> <a href = "red.html"> Reddit sem Scroll Infinito </a> </li>
 				<li> <a href = "depTabela.html"> Dados dos Deputados </a> </li>
 				<li> <a href = "ibgeDados.html"> Dados do IBGE </a> </li> 
 			</ul>
