--- a/teoremadeducao.html
+++ b/teoremadeducao.html
@@ -30,7 +30,7 @@
 		</header>
 	<body>
 		<main>
-			<p> O Teorema da dedução é um meta-teorema do cálculo proposicional. Seu enunciado é: Se $\Gamma\cup \{A\}\vdash B$, então $\Gamma\vdash \{A\} \implies B$.</p>
+			<p> O Teorema da dedução é um meta-teorema do cálculo proposicional. Seu enunciado é: Se $\Gamma\cup \{A\}\vdash B$, então $\Gamma\vdash A \implies B$.</p>
 			<p> Um enunciado mais humano seria: Se com os axiomas, um conjunto de hipóteses $\Gamma$ e com uma hipotese $A$ é possível deduzir $B$, então com o mesmo conjunto $\Gamma$ é possível deduzir $A \implies B$. </p> 
 		</main>
 	</body>
