--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 			<ul>
 				<li> Email: <a href="mailto:talessilvaamaral@gmail.com"> talessilvaamaral@gmail.com</a></p> </li>
 			</ul>
--->
 			<h2 id = "ensMedio">Ensino Médio </h2>
 			<ul>
 				<li> <a href="Conjuntos.html">  Conjuntos  </a></li>
 				<li> <a href="funcoes.html">  Funções  </a></li>
 			</ul>
+-->
 			<h2 id = "coisas"> Coisas interessantes</h2>
 			<p> Coleção de textos que eu considero interessantes. </p>
 			<ul>
@@ -57,6 +57,19 @@
 				<li>
 					<a href="term5.html">Como elevar números terminados em 5 ao quadrado</a>
 				</li>
+			</ul>
+			<h2 id = "javascript"> Javascript </h2>
+			<p>Programas em javascript que eu fiz para passar tempo.</p>
+			<ul>
+				<li>
+					<a href="jogo.html">Jogo Tron</a>
+				</li>
+				<li>
+					<a href="jogo2.html">Flappy Block</a>
+				</li>
+				<li> <a href = "red.html"> Reddit sem Scroll Infinito </a> </li>
+				<li> <a href = "depTabela.html"> Dados dos Deputados </a> </li>
+				<li> <a href = "ibgeDados.html"> Dados do IBGE </a> </li> 
 			</ul>
 			<h2 id = "criterios" > Critérios de divisibilidade </h2>
 			<p> Coleção de critérios de divisibilidade. Vou adicionando mais de acordo com minha vontade. </p>
@@ -77,13 +90,6 @@
 				<li>
 					<a href="divpor11.html"> Divisibilidade por 11 </a>
 				</li>
-			</ul>
-			<h2 id = "api"> APIS </h2>
-			<p> Algumas APIS que eu usei por diversão (um dia eu faço mais) </p>
-			<ul>
-				<li> <a href = "red.html"> Reddit sem Scroll Infinito </a> </li>
-				<li> <a href = "depTabela.html"> Dados dos Deputados </a> </li>
-				<li> <a href = "ibgeDados.html"> Dados do IBGE </a> </li> 
 			</ul>
 		</main>
 	</body>
