atualizando pagina inicial e terminando o teorema da dedução

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 				<li> <a href="funcoes.html">  Funções  </a></li>
 			</ul>
 -->
+			<h2 id = "coisas"> Graduação </h2>
+			<ul>
+				<li> <a href = "calcProposicional.html" > Cálculo proposicional </a>  </li>
+			</ul>
 			<h2 id = "coisas"> Coisas interessantes</h2>
 			<p> Coleção de textos que eu considero interessantes. </p>
 			<ul>
@@ -57,10 +61,16 @@
 				<li>
 					<a href="term5.html">Como elevar números terminados em 5 ao quadrado</a>
 				</li>
+				<li>
+					<a href="teoremadeducao.html">Teorema da dedução</a>
+				</li>
 			</ul>
 			<h2 id = "javascript"> Javascript </h2>
 			<p>Programas em javascript que eu fiz para passar tempo.</p>
 			<ul>
+				<li>
+					<a href = ".\spaceInvaders\index.html"> Asteroid </a>
+				</li>
 				<li>
 					<a href="jogo.html">Jogo Tron</a>
 				</li>
