adicionando curvas de bezier

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 			<p>Programas em javascript que eu fiz para passar tempo.</p>
 			<ul>
 				<li>
+					<a href = "curvaBezier.html"> Curvas Bézier </a>
+				</li>
+				<li>
 					<a href = ".\spaceInvaders\index.html"> Asteroid </a>
 				</li>
 				<li>
