--- a/teoremadeducao.html
+++ b/teoremadeducao.html
@@ -74,9 +74,9 @@
 					<li> $\Gamma$ (Hipótese) </li>
 					<li> $A \implies X_j$ (Hipótese de indução)</li>
 					<li> $A \implies X_q$ (Hipótese de indução)</li>
-					<li> $A \implies (X_j \implies B)$ (3 e $X_q = (X_j \implies B)$)</li>
-					<li> $ ( A \implies (X_j \implies B) ) \implies ((A \implies X_j) \implies (A \implies B) ) $ (<a target="_blank" href = "calcProposicional.html#ax" >Axioma 2</a>)</li>
-					<li> $ (A \implies X_j) \implies (A \implies B)  $ (MP 4,5)</li>
+					<li> $A \implies (X_q \implies B)$ (3 e $X_j = (X_q \implies B)$)</li>
+					<li> $ ( A \implies (X_q \implies B) ) \implies ((A \implies X_q) \implies (A \implies B) ) $ (<a target="_blank" href = "calcProposicional.html#ax" >Axioma 2</a>)</li>
+					<li> $ (A \implies X_q) \implies (A \implies B)  $ (MP 4,5)</li>
 					<li> $ A \implies B  $ (MP 2,6)</li>
 				</ol>
 				Logo $\Gamma \vdash A \implies B$.
