--- a/teoremadeducao.html
+++ b/teoremadeducao.html
@@ -62,7 +62,7 @@
 				<h3> Hipótese de indução </h3>
 				<p> Supomos que se $\Gamma\cup \{A \} \vdash B$ e  a demonstração de $B$ dada por $X_1,X_2,\cdots,X_n$ tiver tamanho menor ou igual a $k$, então $\Gamma \vdash A \implies B$. </p>
 				<h3> Caso $n = k+1$: </h3>
-				<p> Temos  $\Gamma\cup \{A \} \vdash B$ e a demonstração de $B$ é  dada por $X_1,X_2,\cdots,X_k, X_{k+1}$. Temos portanto $B = X_{k+1}$ e pelo mneos um dos 3 ocorre: </p>
+				<p> Temos  $\Gamma\cup \{A \} \vdash B$ e a demonstração de $B$ é  dada por $X_1,X_2,\cdots,X_k, X_{k+1}$. Temos portanto $B = X_{k+1}$ e pelo menos um dos 3 ocorre: </p>
 				<ul>
 					<li> $X_{k+1}$  veio por M.P de dois anteriores; </li>
 					<li> $X_{k+1} = A$ ;</li>
