--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 -->
 			<h2 id = "coisas"> Graduação </h2>
 			<ul>
-				<li> <a href = "latex/analise.pdf" > Minhas Notas </a>  </li>
+				<li> <a href = "latex/analise.pdf" > Minhas Notas (Em Progresso) </a>  </li>
 				<li> <a href = "calcProposicional.html" > Cálculo proposicional </a>  </li>
 			</ul>
 			<h2 id = "coisas"> Coisas interessantes</h2>
