--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
 -->
 			<h2 id = "coisas"> Graduação </h2>
 			<ul>
-				<li> <a href = "latex/analise.pdf" > Minhas Notas (Em Progresso) </a>  </li>
+				<li>  
+					Minhas Notas:
+					<ul> 
+						<li> <a href = "latex/analise.pdf" > PDF </a>  </li>  
+						<li> <a href = "https://github.com/TalesAmaral/latex" > Código Fonte </a>  </li>  
+					</ul> 
+				</li>
 				<li> <a href = "calcProposicional.html" > Cálculo proposicional </a>  </li>
 			</ul>
 			<h2 id = "coisas"> Coisas interessantes</h2>
