--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 			<h2 id = "javascript"> Javascript </h2>
 			<p>Programas em javascript que eu fiz para passar tempo.</p>
 			<ul>
+				li>
+					<a href = "fracoes.html"> Jogo de Frações </a>
+				</li>
 				<li>
 					<a href = "lorentz/index.html"> Atrator de Lorentz </a>
 				</li>
