--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<p>Programas em javascript que eu fiz para passar tempo.</p>
 			<ul>
 				<li>
-					<a href = "fracoes.html"> Jogo de Frações </a>
+					<a href = "fracoesJogo/fracoes.html"> Jogo de Frações </a>
 				</li>
 				<li>
 					<a href = "lorentz/index.html"> Atrator de Lorentz </a>
