--- a/depTabela.html
+++ b/depTabela.html
@@ -20,6 +20,7 @@
 		<!--[if lt IE 9]>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
 		<![endif]-->
+		 <meta http-equiv="Content-Security-Policy" content="img-src 'self' https://www.camara.leg.br/;">
 	</head>
 	<body>
 		<main id = "mural">
