--- a/depDados.html
+++ b/depDados.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
 		<meta name="description" content="Dados dos deputados.">
 		<title> Dados dos deputados. </title>
+		<meta http-equiv="Content-Security-Policy" content="img-src 'self' https://www.camara.leg.br/;">
 		<style>
 img{
 	max-width: 114px;
