--- a/depTabela.html
+++ b/depTabela.html
@@ -109,6 +109,7 @@
 												let fotoDepCell = document.createElement("td");
 												let imgEl = document.createElement("img");
 												imgEl.src = deputado.urlFoto
+												img.crossOrigin = "anonymous";
 												fotoDepCell.appendChild(imgEl);
 
 												let partidoDepCell = document.createElement("td");
