--- a/depDados.html
+++ b/depDados.html
@@ -60,7 +60,7 @@ img{
 
 								let imgEl = document.createElement("img");
 								imgEl.src = depData.ultimoStatus.urlFoto
-
+								imgEl.crossOrigin = "anonymous";
 
 								nomeDepHeader.appendChild(cellText);
 								header.appendChild(nomeDepHeader);
